images/main.css
body {
  background-repeat: no-repeat;
  background-size: cover;
  background-color: rgb(43, 43, 44);
  color: rgb(197, 198, 201);
  margin-top: 100px;
  font-family: "Segoe UI", Tahoma, sans-serif;
  font-size: 12px;
  text-align: center;
  position: relative;
  height: 100%;
  max-height: 3000px;
}

section {
  font-size: 40px;
  font-family: "Segoe UI", Tahoma, sans-serif;
  padding: 10px;
  background-color: rgb(43, 43, 44);
}

.hyperlink {
  color: rgb(113, 142, 230);
  text-decoration: none;
}

.hyperlink:hover {
  color: rgb(89, 103, 148);
}

.header {
  background-image: url("");
  background-position: bottom;
  background-repeat: no-repeat;
  background-size: cover;
  line-height: 1.2;
  padding: 10vw 2em;
  text-align: center;
}

.sticky {
  position: fixed;
  top: 0;
  width: 100%;
  visibility: visible;
}

.text {
  text-align: center;
  font-weight: lighter;
  font-size: 40px;
}

.footer {
  position: relative;
  margin-top: 10%;
  text-align: center;
  bottom: 0;
}

#navbar {
  opacity: 1;
  animation: 0.5s linear 0s 1 normal none running fadein;
  visibility: visible;
  z-index: 999;
  overflow: hidden;
  background-color: rgb(43, 45, 53);
  visibility: hidden;
  left: 0px;
  right: 0px;
}

.navbar-a {
  float: right;
  display: block;
  font-weight: bold;
  color: rgb(168, 173, 194);
  text-align: center;
  padding: 14px;
  text-decoration: none;
  font-size: 25px;
}

#navbar-name {
  float: left;
  font-weight: bold;
  display: block;
  color: rgb(168, 173, 194);
  text-align: left;
  padding: 14px;
  text-decoration: none;
  font-size: 25px;
}

#a {
  font-size: 95px;
}

#email-icon {
  height: auto;
  width: 5.75%;
}

#github {
  height: auto;
  width: 3%;
}

#linkedin {
  margin-left: 17px;
  height: auto;
  width: 3%;
}

@keyframes fadein {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

@keyframes fadeout {
  0% {
    opacity: 1;
  }
  100% {
    opacity: 0;
  }
}

